immich-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: slave-pi-1
      containers:
        - name: immich-server
          image: 'ghcr.io/immich-app/immich-server:release'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2283
          volumeMounts:
            - mountPath: /usr/src/app/upload
              name: immichdata
          livenessProbe:
            httpGet:
              path: /server-info/ping
              port: 2283
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 5
      volumes:
        - name: immichdata
          persistentVolumeClaim:
            claimName: immich-volume-claim
