redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: immich-redis
          image: 'docker.io/valkey/valkey:8-bookworm@sha256:42cba146593a5ea9a622002c1b7cba5da7be248650cbb64ecb9c6c33d29794b1'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - exec redis-cli ping || exit 1
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - -e
              - exec redis-cli ping || exit 1
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
