immich-machine-learning-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
spec:
  ports:
    - port: 3003
      protocol: TCP
      targetPort: 3003
  selector:
    app: immich-machine-learning
