immich-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  ports:
    - port: 2283
      protocol: TCP
      targetPort: 2283
  selector:
    app: immich-server
