postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  labels:
    app: immich-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: immich-postgres
