redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  labels:
    app: immich-redis
spec:
  ports:
    - port: 6379
  selector:
    app: immich-redis
