immich-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-server
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`immich.huebschers.us`)
      priority: 10
      services:
        - name: immich-server
          port: 2283
